--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-toner",
   "version": "0.1.0",
-  "homepage": "https://github.com/muslimabiteahsan2002/e-commerce-project.git",
+  "homepage": " https://gitname.github.io/e-commerce-project",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
